# test-ios-universal

./: .travis.yml  README.md
Boo-usage/: CMakeLists.txt  boo.cpp
Foo-package/: CMakeLists.txt  FooConfig.cmake.in  core.cpp  core.hpp  foo.cpp
Foo-package/util/sources/: CMakeLists.txt  util.cpp  util.hpp
toolchains/: ios.cmake
